# sliders

./: .gitignore  README.md  notes.txt  pyproject.toml  requirements-loose.txt  requirements.txt
trainscripts/imagesliders/: config_util.py  lora.py  train_lora-scale-xl.py  train_util.py
trainscripts/imagesliders/data/: config-xl.yaml  prompts-xl.yaml
